# xdaliclock

./: Makefile  README  version.h  xdaliclock.lsm
X11/: .gitignore  Makefile.in  README  XDaliClock.ad  XDaliClock_ad.h  app.h  colors.c  config.h.in  configure  configure.ac  configure.in  digital.c  gresource.xml  hsv.c  hsv.h  org.jwz.xdaliclock.gschema.xml  prefs.c  prefs.h  prefs.ui  resources.c  window.c  window.h  window.ui  xdaliclock.c  xdaliclock.desktop  xdaliclock.h  xdaliclock.man  xdaliclock.spec
X11/Xlib-classic/: Makefile.in  README  XDaliClock.ad  XDaliClock_ad.h  colors.c  configure  configure.in  digital.c  overlay.c  visual.c  xdaliclock.c  xdaliclock.h  xdaliclock.man  xdaliclock.spec
font/: colonB.xbm  colonC.xbm  colonD.xbm  colonE.xbm  eightB.xbm  eightC.xbm  eightD.xbm  eightE.xbm  elevenB.xbm  elevenC.xbm  elevenD.xbm  elevenE.xbm  elevenF.xbm  fifteenB.xbm  fifteenC.xbm  fifteenD.xbm  fifteenE.xbm  fifteenF.xbm  fiveB.xbm  fiveC.xbm  fiveD.xbm  fiveE.xbm  fourB.xbm  fourC.xbm  fourD.xbm  fourE.xbm  fourteenB.xbm  fourteenC.xbm  fourteenD.xbm  fourteenE.xbm  fourteenF.xbm  genfonts.pl  nineB.xbm  nineC.xbm  nineD.xbm  nineE.xbm  oneB.xbm  oneC.xbm  oneD.xbm  oneE.xbm  (+43 more)
numbers0/: eleven0.xbm  fifteen0.xbm  fourteen0.xbm  ten0.xbm  thirteen0.xbm  twelve0.xbm  underbar0.xbm
numbers1/: eleven1.xbm  fifteen1.xbm  fourteen1.xbm  ten1.xbm  thirteen1.xbm  twelve1.xbm  underbar1.xbm
numbers2/: eleven2.xbm  fifteen2.xbm  fourteen2.xbm  ten2.xbm  thirteen2.xbm  twelve2.xbm  underbar2.xbm
numbers_big/: README  colonA.xbm  colonB.xbm  colonB2.xbm  colonC.xbm  colonC2.xbm  colonC3.xbm  colonD.xbm  colonD2.xbm  colonD3.xbm  colonD4.xbm  colonE.xbm  colonF.xbm  colonG.xbm  eightA.xbm  eightB.xbm  eightB2.xbm  eightC.xbm  eightC2.xbm  eightC3.xbm  eightD.xbm  eightD2.xbm  eightD3.xbm  eightD4.xbm  eightE.xbm  eightF.xbm  eightG.xbm  fiveA.xbm  fiveB.xbm  fiveB2.xbm  fiveC.xbm  fiveC2.xbm  fiveC3.xbm  fiveD.xbm  fiveD2.xbm  fiveD3.xbm  fiveD4.xbm  fiveE.xbm  fiveF.xbm  fiveG.xbm  (+117 more)
